tests/compiletests/ui/arch/subgroup/subgroup_composite_all_equals.stderr
error: `u8` type used without `OpCapability Int8`
   |
   = note: used by unnamed constant
   = note: used from within `spirv_std::arch::subgroup::subgroup_all_equal::<subgroup_composite_all_equals::MyStruct>`
note: called by `subgroup_composite_all_equals::disassembly`
  --> <$DIR/subgroup_composite_all_equals.rs>:27:5
   |
LL |     subgroup_all_equal(my_struct)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `subgroup_composite_all_equals::main`
  --> <$DIR/subgroup_composite_all_equals.rs>:44:20
   |
LL |         let bool = disassembly(my_struct);
   |                    ^^^^^^^^^^^^^^^^^^^^^^
note: called by GLCompute entry-point `main`
  --> <$DIR/subgroup_composite_all_equals.rs>:31:8
   |
LL | pub fn main(
   |        ^^^^

error: aborting due to 1 previous error

